fix continue btn overlap (#375)

--- a/themes/fast-track-theme/lms/static/sass/course/course_dashboard.scss
+++ b/themes/fast-track-theme/lms/static/sass/course/course_dashboard.scss
@@ -115,15 +115,17 @@ body.view-in-course .info-wrapper {
   }
 
   .date-continue-wrapper {
+    display: flex;
+    flex-flow: row wrap;
+
     position: relative;
     height: 2rem;
 
-    .date, a {
-      position: absolute;
-      bottom: 0;
-    }
-    a {
-      right: 0;
+    justify-content: space-between;
+    align-items: center;
+
+    .date {
+      padding: 0;
     }
   }
 }
